# cliflux

./: CHANGELOG.md  Cargo.toml  LICENSE  LICENSE.md  README.md  TODO.md  shard.yml
.github/workflows/: build.yml
spec/: cliflux_spec.cr  spec_helper.cr
src/: cliflux.cr  config.rs  libminiflux.rs  main.rs  tui.rs
src/components/: feed_entry_list.rs  loading_text.rs  mod.rs  read_entry_view.rs
src/lib/: libminiflux.cr  open_in_browser.cr  rendering.cr  tui.cr
src/ui/: mod.rs  model.rs  utils.rs
src/ui/components/: error_message.rs  feed_entry_list.rs  keyboard_help.rs  loading_text.rs  mod.rs  read_entry_view.rs
