[package]
name = "cliflux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-to-tui = "2.0.0"
futures = "0.3.26"
html2text = { version = "0.4.5", features = ["ansi_colours"] }
open = "3.2.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.152", features = ["std", "derive"] }
serde_json = "1.0.93"
stringreader = "0.1.1"
tokio = { version = "1", features = ["full"] }
toml = "0.7.2"
tui-realm-stdlib = "1.2.0"
tuirealm = "1.8.0"
unicode-segmentation = "1.10.1"
xdg = "2.4.1"
