[package]
name = "cliflux"
authors = [
	"Spencer Williams <spencerwi@gmail.com>"
]
description = "A terminal-ui (TUI) client for the Miniflux RSS reader"
readme = "README.md"
repository = "https://github.com/spencerwi/cliflux"
license = "MIT"
keywords = [
	"tui", "terminal_ui", "miniflux", "rss", "cli"
]
version = "1.8.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "4.0.1"
futures = "0.3.26"
html2text = { version = "0.5.0", features = ["ansi_colours"] }
open = "3.2.0"
reqwest = { version = "0.11.24", features = ["json", "rustls-tls"] }
serde = { version = "1.0.152", features = ["std", "derive"] }
serde_json = "1.0.93"
stringreader = "0.1.1"
tokio = { version = "1", features = ["full"] }
toml = "0.7.2"
tui-realm-stdlib = "1.3.2"
tuirealm = "1.9.2"
unicode-segmentation = "1.10.1"
